--- a/Styles/portfolio.css
+++ b/Styles/portfolio.css
@@ -25,13 +25,12 @@ nav ul li a{text-decoration: none;
 .button-primary{height: 64px; width: 150px; background-color: #FD6E0A; border:none; border-radius: 5px;
 font-weight: bold; font-size: 20px; color: white; padding: 18px 35px 19px 36px}
 
-.dark2{color: #474747;}
-
 nav ul{display: flex; align-items: center;
 }
 
 
-
+/* body width */
+.open-sans-normal{width: 100%}
 
 
 
@@ -45,13 +44,19 @@ nav ul{display: flex; align-items: center;
 
 
 
-
+/* shared style */
 /* banner-style */
 .dark1{color: #181818}
+.dark2{color: #474747;}
 .dark3{color: #757575}
 
+.section-title{font-weight: bold; font-size: 35px; text-align: center; color: #181818;}
+
+.section-description{font-size: 18px; color:#757575}
+
+
 .banner{display: flex;
-justify-content: space-between; align-items: center;}
+justify-content: space-between; align-items: center; margin-bottom: 130px;}
 
 .banner-content{max-width: 585px; max-height: 356px; margin: 230px;}
 
@@ -61,6 +66,21 @@ justify-content: space-between; align-items: center;}
 
 .banner-description{font-size: 18px; display: block; line-height: 30px;}
 
-.banman{width: auto; height:fit-content;}
+.banman{width: 580px;}
 
 .banbg{width: 1036; height: 518; margin: 320px 200px 0px 760px}
+
+.banner-button{display: flex; gap: 30px;}
+
+
+
+
+/* main styles */
+
+main{max-width: 1140px; margin: 0 auto;}
+
+.about{background-color: #FFF8F3; border-radius: 10px; padding: 130px 150px; text-align: center;}
+
+.about-items{display: flex;justify-content: space-between;}
+
+.item-description{font-weight: bold; font-size: 20px;}
