--- a/Styles/portfolio.css
+++ b/Styles/portfolio.css
@@ -54,7 +54,7 @@ nav ul{display: flex; align-items: center;
 
 .section-description{font-size: 18px; color:#757575}
 
-
+/* banner style */
 .banner{display: flex;
 justify-content: space-between; align-items: center; margin-bottom: 130px;}
 
@@ -81,6 +81,20 @@ main{max-width: 1140px; margin: 0 auto;}
 
 .about{background-color: #FFF8F3; border-radius: 10px; padding: 130px 150px; text-align: center;}
 
-.about-items{display: flex;justify-content: space-between;}
+.about-items{display: flex;justify-content: space-around;}
 
-.item-description{font-weight: bold; font-size: 20px;}
+.item-description{font-weight: bold; font-size: 20px; margin-bottom: 30px;}
+
+/* what I do */
+.What-do .section-description{width: 900px; text-align: center; margin: 0 auto;}
+
+/* skill style */
+.skill-container{display: flex; align-items: center; justify-content: space-between; gap: 24px; margin-top: 50px;}
+
+.skill-title{font-weight:bold; font-size: 20px;}
+.skill-description{font-size: 18px;}
+
+.skill{box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 6%);}
+
+.skill{padding: 30px}
+
