--- a/Styles/portfolio.css
+++ b/Styles/portfolio.css
@@ -98,3 +98,31 @@ main{max-width: 1140px; margin: 0 auto;}
 
 .skill{padding: 30px}
 
+
+/* resume style */
+.resume-column-title{font-weight: bold; font-size: 30px;}
+
+.experience-title{font-weight: bold; font-size: 25px; margin-bottom:3px;}
+
+.experience-subtitle{font-weight: 600; font-size: 20px; color: #757575; margin-bottom: 20px; margin-top: 0px;}
+
+.experience-description{font-size: 16px; color:#757575; margin-top:10px;}
+
+.resume-container{display: flex; gap: 24px; margin-top: 100px;}
+
+.button-resume{display: block; width: 200px; height: 64px; color: white; font-size: 20px; font-weight: bold; background-color: #FD6E0A; margin: 50px auto;}
+
+/* footer style */
+footer{background-color: beige;}
+.footer-description{font-size: 16px; line-height: 28px;}
+
+footer{display: flex; gap: 100px; margin-top: 100px; padding: 130px 230px}
+
+.footer-column{width: 50%;}
+
+input[type='text'], input[type='email'], footer textarea
+{height: 64px; border-radius: 5px; background-color: white; color: #757575; display: block; padding: 10px 20px; width: 100%; margin-bottom: 24px; border: none; font-size: 20px;}
+
+footer textarea{width: 100%; height: 200px;}
+
+input[type='submit'] {display: block; width: 200px; height: 64px; color: white; font-size: 20px; font-weight: bold; background-color: #FD6E0A; margin: 20px 0px;}
